--- a/hello-world-app/package.json
+++ b/hello-world-app/package.json
@@ -5,14 +5,14 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist/",
-    "dev": "NODE_ENV=development ts-node-dev --respawn ./server.ts",
+    "dev": "NODE_ENV=development ts-node-dev --respawn ./app/server.ts",
     "build": "yarn clean && NODE_ENV=production tsc",
-    "start": "NODE_ENV=production node ./dist/server.js",
+    "start": "NODE_ENV=production node ./dist/app/server.js",
     "test": "NODE_ENV=test jest"
   },
   "dependencies": {
-    "@ethicdevs/fastify-stream-react-views": "^0.9.0",
-    "@ethicdevs/react-monolith": "^0.2.4",
+    "@ethicdevs/fastify-stream-react-views": "^0.9.2",
+    "@ethicdevs/react-monolith": "^0.2.5",
     "cross-fetch": "^3.1.5",
     "fastify-static": "^4.6.1",
     "react": "^17.0.2",
@@ -25,6 +25,7 @@
     "@types/fastify-static": "^2.2.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/styled-components": "^5.1.25",
     "fastify": "=3.27.4",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
