--- a/hello-world-app/package.json
+++ b/hello-world-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hello-world-app",
   "version": "1.0.0",
-  "main": "server.ts",
+  "main": "app/server.ts",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf dist/",
@@ -14,6 +14,7 @@
     "@ethicdevs/fastify-stream-react-views": "^0.9.2",
     "@ethicdevs/react-monolith": "^0.2.5",
     "cross-fetch": "^3.1.5",
+    "fastify": "^3.27.4",
     "fastify-static": "^4.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,7 +27,6 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@types/styled-components": "^5.1.25",
-    "fastify": "=3.27.4",
     "jest": "^27.5.1",
     "npm-run-all": "^4.1.5",
     "ts-node-dev": "^2.0.0",
